winner winner chicken dinner

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -9,17 +9,23 @@ body {
 }
 body {
   background-color: rgb(181, 202, 191);
-  padding: 4rem;
+  padding: 3rem;
 }
 
 .search {
-    max-width: 120rem;
+    width: 100%;
     margin: auto;
     padding-bottom: 2rem;
 
+    input {
+        width: 100%;
+        max-width: 30rem;
+    }
+
     input,button {
-        height: 5rem;
-        font-size: 4rem;
+        height: 3rem;
+        font-size: 2rem;
+    font-family: 'Libre Baskerville', serif;
     }
 
     button {
@@ -36,28 +42,35 @@ a {
 
 .data {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 3rem;
-    max-width: 120rem;
+    grid-template-columns: 1fr;
+    grid-gap: 1.5rem;
+    max-width: 70rem;
     margin: auto;
-    font-size: 1.7rem;
+    font-size: 1rem;
+    font-family: 'Libre Baskerville', serif;
 }
 
+@media (min-width: 600px) {
+    .data {
+        grid-template-columns:1fr 1fr;
+    }
+}
 
-@media (min-width: 1500px) {
+@media (min-width: 900px) {
     .data {
         grid-template-columns: 1fr 1fr 1fr;
     }
 }
 
 .title {
-    font-size: 3rem;
+    font-size: 1.3rem;
+    
     // height: 7rem;
 }
 
 .recipe {
     background-color: rgb(255, 254, 241);
-    padding: 2rem;
+    padding: 1.2rem;
     display: grid;
     grid-gap: 1rem;
 }
