--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -10,29 +10,33 @@ body {
 body {
   background-color: rgb(181, 202, 191);
   padding: 3rem;
+  display: grid;
+  grid-row-gap: 2rem;
 }
 
 .search {
     width: 100%;
     margin: auto;
-    padding-bottom: 2rem;
-
-    input {
-        width: 100%;
-        max-width: 30rem;
-    }
-
-    input,button {
-        height: 3rem;
-        font-size: 2rem;
-    font-family: 'Libre Baskerville', serif;
-    }
-
-    #submitBtn {
-        display: none;
-    }
 }
 
+input {
+    width: 100%;
+    max-width: 30rem;
+}
+
+input,button {
+    height: 3rem;
+    font-size: 2rem;
+font-family: 'Libre Baskerville', serif;
+}
+
+#submitBtn {
+    display: none;
+}
+
+#favoriteBtn {
+    width: 20rem;
+}
 
 a {
     text-decoration: none !important;
@@ -92,12 +96,16 @@ img {
     font-weight: bold;
 }
 
-.favorites {
+.favorites{
+    display: none;
+}
+
+#clearFavoriteBtn {
     display: none;
 }
 
 .display {
-    display: grid;
+    display: grid !important;
 }
 
 .noDisplay {
